changed starting url

--- a/package.json
+++ b/package.json
@@ -54,5 +54,5 @@
   "bugs": {
     "url": "https://github.com/PRASHANT-SAJWAN/whatsapp-clone/issues"
   },
-  "homepage": "https://github.com/PRASHANT-SAJWAN/whatsapp-clone#readme"
+  "homepage": "https://github.com/whatsapp-clone"
 }
